force-app/main/default/objects/Credit_Memo__c/Credit_Memo__c.object-meta.xml
<CustomObject>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CMN-{0000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>