force-app/main/default/objects/Credit_Memo__c/fields/Amount_Exl_tax_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Amount_Exl_tax_Rollup__c</fullName>
    <label>Amount(Exl Tax)</label>
    <summarizedField>Credit_memo_line_item__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_memo_line_item__c.Credit_Memo_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>