force-app/main/default/objects/Credit_Memo__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memos (Center)</relationshipLabel>
    <relationshipName>Credit_Memos1</relationshipName>
    <type>Lookup</type>
</CustomField>