force-app/main/default/objects/Credit_Memo__c/fields/Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No__c</fullName>
    <label>Cheque No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>