force-app/main/default/objects/Credit_Memo__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Number</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>