force-app/main/default/objects/Credit_Memo__c/fields/NETS_Code__c.field-meta.xml
<CustomField>
    <fullName>NETS_Code__c</fullName>
    <label>NETS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>