force-app/main/default/objects/Credit_Memo__c/fields/Netsuite_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Payment_Method__c</fullName>
    <formula>CASE(Center__r.Organisation__r.Name,
&apos;Aureus Academy Singapore&apos;,
CASE(TEXT(Payment_Method__c),
&apos;Card&apos;, &apos;AURSG-Stripe&apos;,
&apos;Cheque&apos;, &apos;AURSG-Cheque&apos;,
&apos;Cash&apos;, &apos;AURSG-Cash/Funds transfer/Paynow&apos;,
&apos;NETS&apos;, &apos;AURSG-Nets&apos;,
&apos;Others&apos;, &apos;AURSG-Cash/Funds transfer/Paynow&apos;,
&apos;Offline Card&apos;, &apos;AURSG-CC Terminals&apos;,
&apos;&apos;),
&apos;Aureus Academy Hong Kong&apos;,
CASE(TEXT(Payment_Method__c),
&apos;Card&apos;, &apos;AURHK-Stripe&apos;,
&apos;Cheque&apos;, &apos;AURHK-Cheque&apos;,
&apos;Cash&apos;, &apos;AURHK-Cash/Funds Transfer/Paynow&apos;,
&apos;Others&apos;, &apos;AURHK-Cash/Funds Transfer/Paynow&apos;,
&apos;&apos;),
&apos;Ossia Music School Singapore&apos;,
CASE(TEXT(Payment_Method__c),
&apos;Card&apos;, &apos;AUROM-Stripe&apos;,
&apos;Cheque&apos;, &apos;AUROM-Cheque&apos;,
&apos;Cash&apos;, &apos;AUROM-Cash/Funds Transfer/Paynow&apos;,
&apos;Others&apos;, &apos;AUROM-Cash/Funds Transfer/Paynow&apos;,
&apos;&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Payment Method</label>
    <type>Text</type>
</CustomField>