force-app/main/default/objects/Credit_Memo__c/fields/Organisations_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisations_Name__c</fullName>
    <formula>Parent_Account__r.Centre_Name__r.Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>