force-app/main/default/objects/Credit_Memo__c/fields/Refund_ID__c.field-meta.xml
<CustomField>
    <fullName>Refund_ID__c</fullName>
    <label>Refund ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>