force-app/main/default/objects/Credit_Memo__c/fields/Stripe_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Fee__c</fullName>
    <label>Stripe Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>