force-app/main/default/objects/Credit_Memo__c/fields/Tax_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Rollup__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>Credit_memo_line_item__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Credit_memo_line_item__c.Credit_Memo_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>