force-app/main/default/objects/Credit_Memo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>